<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/head"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/head02"
                android:scaleType="fitXY" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#DCDCDC" >

                <Button
                    android:id="@+id/postBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:text="@string/postNumber"
                    android:textColor="#77DDFF"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/focusBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:text="@string/focusNumber"
                    android:textColor="#77DDFF"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/fansBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:text="@string/fansNumber"
                    android:textColor="#77DDFF"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#DCDCDC"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/postNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:text="0"
                    android:textColor="#77DDFF"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/focusNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:text="0"
                    android:textColor="#77DDFF"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/fansNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:text="0"
                    android:textColor="#77DDFF"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
            android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F5F5F5"
            android:orientation="vertical" >
            
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="2dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/qianName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="心情"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/qianWord"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:editable="false"
                        android:background="#FFFFFF"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/userName"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/otherIdEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:editable="false"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/QName"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/otherNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:editable="false"
                        android:background="#FFFFFF"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>

                

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="生日"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/birthdayEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:editable="false"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/gender"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/sexEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:editable="false"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>

            <Button
                android:id="@+id/likeyouBut"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:text="@string/likeyou"
                android:textColor="#FFAA33"
                android:textSize="18sp" />
            <Button
                android:id="@+id/messageBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:text="发私信"
                android:textColor="#FFAA33"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:background="#FFAA33"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>